--- a/demo-properties/src/main/resources/application-prod.yml
+++ b/demo-properties/src/main/resources/application-prod.yml
@@ -2,7 +2,7 @@ application:
   name: prod环境 @artifactId@
   version: prod环境 @version@
 developer:
-  name: prod环境 xkcoding
+  name: prod环境 wxt
   website: prod环境 http://xkcoding.com
   qq: prod环境 237497819
   phone-number: prod环境 17326075631
